--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "express": "^4.18.2",
     "nodemon": "^3.0.3"
+  },
+  "dependencies": {
+    "socket.io": "^4.7.4"
   }
 }
